--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
   margin: 0;
 }
 
+*::placeholder {
+  color: gray;
+}
+
 body {
   background-color: #000;
   padding: 0;
@@ -61,8 +65,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
   width: 100%;
-  margin: 1em 0 0 0;
   padding: 0;
 }
 
@@ -91,11 +95,8 @@ body {
 
 input,
 select {
+  border-radius: 1em;
   padding: 0.25em 1em;
-}
-
-*::placeholder {
-  color: gray;
 }
 
 /* modals */
@@ -118,9 +119,9 @@ select {
   margin: 0 0 1em 0;
 }
 
-.container-add #submit-movie {
+/* .container-add #submit-movie {
   display: none;
-}
+} */
 
 /* modal design not content */
 .modal-header {
