--- a/css/style.css
+++ b/css/style.css
@@ -10,17 +10,79 @@
 }
 
 body {
+  background-image: url(https://img.freepik.com/premium-photo/black-stone-texture-dark-slate-background-top-view_88281-1206.jpg?w=2000);
+  background-attachment: fixed;
   background-color: #000;
   padding: 0;
   margin: 0;
 }
 
+/* navbar */
+
+.navbar {
+  position: fixed;
+  width: 100%;
+  box-shadow: 0 0 1em black;
+  z-index: 99999;
+}
+
+.nav-link {
+  cursor: pointer;
+}
+
+.form-control {
+  color: #212529;
+  background-color: #121212;
+  border-left: 1px solid white;
+  border-right: none;
+  border-radius: 5em 0 0 5em;
+  padding: 0.25em 1em;
+  margin: 0 !important;
+  z-index: 1;
+}
+
+.form-control:focus {
+  color: inherit;
+  background-color: #121212;
+  filter: brightness(1.15);
+}
+
+.submit-button {
+  color: white;
+  background-color: #121212;
+  border-top: 1px solid white;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
+  border-left: none;
+  border-radius: 0 5em 5em 0;
+  padding: 0 1em;
+}
+
+.submit-button:hover {
+  filter: brightness(1.5);
+}
+
+/* loading */
+
 .container-load {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0;
+  padding-top: 1em;
 }
+
+.page-load {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 2em;
+  width: 100%;
+  background: radial-gradient(#000, rgba(0 0 0/0.75), rgba(0 0 0/ 0.5), rgba(0 0 0 / 0));
+  backdrop-filter: blur(5px);
+  margin: 1em 0;
+}
+
+/* content */
 
 .container-movies {
   display: flex;
@@ -33,7 +95,9 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: flex-start;
   width: 16em;
+  background-color: rgba(17 17 34/ 0.85);
   border: 2px solid white;
   border-radius: 1em;
   margin: 1em;
@@ -47,12 +111,19 @@ body {
 }
 
 .movie h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   font-size: 1em;
   font-weight: bold;
+  padding: 0;
   margin: 1em 0;
 }
 
 .movie span {
+  /* display: none; */
+  color: white;
   margin: 0.25em 0;
 }
 
@@ -61,23 +132,30 @@ body {
   padding: 0 1em;
 }
 
+.rating {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .movie-buttons {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
   width: 100%;
-  padding: 0;
+  margin-top: 0.5em;
+  overflow: hidden;
 }
 
 .edit-movie,
 .delete-movie,
 .more-info {
-  display: inline;
-  color: white;
-  border: 1px solid white;
   height: 2em;
   width: 100%;
+  color: white;
+  font-weight: bold;
+  border: 1px solid white;
+  overflow: hidden;
   cursor: pointer;
 }
 
@@ -119,9 +197,9 @@ select {
   margin: 0 0 1em 0;
 }
 
-/* .container-add #submit-movie {
+.container-add #submit-movie {
   display: none;
-} */
+}
 
 /* modal design not content */
 .modal-header {
@@ -138,17 +216,10 @@ select {
   fill: white !important;
 }
 
-.modal-header h5 {
-  color: black;
-  background-color: white;
-}
-
-.modal-body {
-  color: black;
-  background-color: white;
-}
-
-.modal-footer {
+.modal-body,
+.modal-footer,
+.modal-header h5,
+.modal-body span {
   color: black;
   background-color: white;
 }
