--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,10 @@
 }
 
 body {
-  background-image: url(https://img.freepik.com/premium-photo/black-stone-texture-dark-slate-background-top-view_88281-1206.jpg?w=2000);
+  background-image: url(../img/background.jpg);
   background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
   background-color: #000;
   padding: 0;
   margin: 0;
@@ -117,11 +119,16 @@ body {
   width: 100%;
   font-size: 1em;
   font-weight: bold;
+  backdrop-filter: blur(3px);
   padding: 0;
   margin: 1em 0;
 }
 
 .movie span {
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+  backdrop-filter: blur(3px);
   /* display: none; */
   color: white;
   margin: 0.25em 0;
