--- a/css/style.css
+++ b/css/style.css
@@ -101,10 +101,15 @@ body {
   width: 16em;
   background-color: rgba(17 17 34/ 0.75);
   backdrop-filter: blur(5px);
+  box-shadow: 0 0 1.5em rgba(0 0 0 / 1);
   border: 2px solid white;
   border-radius: 1em;
   margin: 1em;
   overflow: hidden;
+}
+
+.movie * {
+  text-shadow: 0 0 1em black;
 }
 
 .poster {
@@ -158,6 +163,9 @@ body {
 .edit-movie,
 .delete-movie,
 .more-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 2em;
   width: 100%;
   color: white;
@@ -172,11 +180,24 @@ body {
 }
 
 .edit-movie {
-  background-color: blue;
+  background: linear-gradient(rgba(150 150 255 / 1), blue, rgba(0 0 255 / 0.75), rgba(0 0 255 / 0.5), rgba(0 0 255 / 0.25));
 }
 
 .delete-movie {
-  background-color: red;
+  background: linear-gradient(rgba(255 150 150 / 1), red, rgba(255 0 0 / 0.75), rgba(255 0 0 / 0.5), rgba(255 0 0 / 0.25));
+}
+
+.edit-movie:hover,
+.delete-movie:hover,
+.more-info:hover {
+  filter: brightness(1);
+}
+
+.edit-movie:active,
+.delete-movie:active,
+.more-info:active {
+  box-shadow: 0 0 0.5em black inset;
+  filter: brightness(0.75);
 }
 
 input,
@@ -235,4 +256,26 @@ select {
 .modal-body span {
   color: black;
   background-color: white;
+}
+
+/* footer */
+
+footer {
+  background-color: #000;
+  margin-top: 2em;
+}
+
+.text-muted {
+  filter: drop-shadow(0 0 0.125em rgba(255 255 255 / 0.125));
+}
+
+footer svg {
+  fill: white !important;
+  filter: drop-shadow(0 0 0.125em white);
+}
+
+@media screen and (max-width: 425px) {
+  .page-load {
+    margin-top: 1.5em;
+  }
 }
