--- a/css/style.css
+++ b/css/style.css
@@ -15,15 +15,12 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-color: #000;
-  padding: 0;
-  margin: 0;
 }
 
 /* navbar */
 
 .navbar {
   position: fixed;
-  width: 100%;
   box-shadow: 0 0 1em black;
   z-index: 99999;
 }
@@ -83,7 +80,6 @@ body {
   justify-content: center;
   align-items: center;
   height: 2em;
-  width: 100%;
   text-shadow: 0 0 1em black;
   background: radial-gradient(#000, rgba(0 0 0/0.75), rgba(0 0 0/ 0.5), rgba(0 0 0 / 0));
   backdrop-filter: blur(5px);
@@ -124,16 +120,14 @@ body {
 
 .poster {
   height: 20em;
-  width: 100%;
   border-bottom: 1px solid white;
   cursor: pointer;
 }
 
-.movie h1 {
+.title {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
   font-size: 1em;
   font-weight: bold;
   padding: 0;
@@ -144,7 +138,6 @@ body {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
-  width: 100%;
   color: white;
   margin: 0.25em 0;
 }
@@ -164,7 +157,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
   margin-top: 0.5em;
   overflow: hidden;
 }
@@ -176,7 +168,6 @@ body {
   justify-content: center;
   align-items: center;
   height: 2em;
-  width: 100%;
   color: white;
   font-weight: bold;
   text-shadow: 2px 2px 4px rgba(0 0 0 / 1);
@@ -238,7 +229,6 @@ select {
 
 .container-add input {
   border: 1px solid black;
-  width: 100%;
   margin: 0 0 1em 0;
 }
 
@@ -295,6 +285,12 @@ footer {
 
 .bi-instagram {
   fill: orangered !important;
+}
+
+/* addtional classes */
+
+.width100 {
+  width: 100%;
 }
 
 /* media queries */
