--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
+:root {
+  --border: 1px solid #fff;
+}
+
 * {
-  color: white;
+  color: #fff;
   font-family: sans-serif;
   padding: 0;
   margin: 0;
@@ -21,23 +25,23 @@ body {
 
 .navbar {
   position: fixed;
-  box-shadow: 0 0 1em black;
+  box-shadow: 0 0 1em #000;
   z-index: 99999;
 }
 
 .navbar-brand {
-  filter: drop-shadow(0 0 0.125em white);
+  filter: drop-shadow(0 0 0.125em #fff);
 }
 
 .nav-link {
-  text-shadow: 0 0 0.5em black;
+  text-shadow: 0 0 0.5em #000;
   cursor: pointer;
 }
 
 .form-control {
   color: #212529;
   background-color: #121212;
-  border-left: 1px solid white;
+  border-left: var(--border);
   border-right: none;
   border-radius: 5em 0 0 5em;
   padding: 0.25em 1em;
@@ -52,11 +56,11 @@ body {
 }
 
 .submit-button {
-  color: white;
+  color: #fff;
   background-color: #121212;
-  border-top: 1px solid white;
-  border-right: 1px solid white;
-  border-bottom: 1px solid white;
+  border-top: var(--border);
+  border-right: var(--border);
+  border-bottom: var(--border);
   border-left: none;
   border-radius: 0 5em 5em 0;
   padding: 0 1em;
@@ -74,9 +78,13 @@ body {
 
 .page-load {
   height: 2em;
-  text-shadow: 0 0 1em black;
+  width: 70%;
+  text-shadow: 0 0 1em #000;
   background: radial-gradient(#000, rgba(0 0 0/0.75), rgba(0 0 0/ 0.5), rgba(0 0 0 / 0));
   backdrop-filter: blur(5px);
+  box-shadow: 0 0 1em #000;
+  border: 2px solid white;
+  border-radius: 0 0 50% 50%;
   margin: 1em 0;
 }
 
@@ -86,28 +94,24 @@ body {
 
 /* content */
 
-.container-movies {
-  flex-wrap: wrap;
-}
-
 .movie {
   width: 16em;
   background-color: rgba(17 17 34/ 0.75);
   backdrop-filter: blur(5px);
   box-shadow: 0 0 1.5em rgba(0 0 0 / 1);
-  border: 2px solid white;
+  border: 2px solid #fff;
   border-radius: 1em;
   margin: 1em;
   overflow: hidden;
 }
 
 .movie * {
-  text-shadow: 0 0 1em black;
+  text-shadow: 0 0 1em #000;
 }
 
 .poster {
   height: 20em;
-  border-bottom: 1px solid white;
+  border-bottom: var(--border);
   cursor: pointer;
 }
 
@@ -119,8 +123,7 @@ body {
 }
 
 .movie span {
-  flex-wrap: wrap;
-  color: white;
+  color: #fff;
   margin: 0.25em 0;
 }
 
@@ -138,25 +141,25 @@ body {
 .delete-movie,
 .more-info {
   height: 2em;
-  color: white;
+  color: #fff;
   font-weight: bold;
   text-shadow: 2px 2px 4px rgba(0 0 0 / 1);
-  border: 1px solid white;
+  border: var(--border);
   overflow: hidden;
   cursor: pointer;
 }
 
 .more-info {
-  background-color: green;
+  background-color: #0f0;
 }
 
 .edit-movie {
-  background: linear-gradient(rgba(150 150 255 / 1), blue, rgba(0 0 255 / 0.75), rgba(0 0 255 / 0.5), rgba(0 0 255 / 0.25));
+  background: linear-gradient(rgba(150 150 255 / 1), #00f, rgba(0 0 255 / 0.75), rgba(0 0 255 / 0.5), rgba(0 0 255 / 0.25));
   filter: drop-shadow(1px 1px 1px rgba(0 0 255 / 0.5));
 }
 
 .delete-movie {
-  background: linear-gradient(rgba(255 150 150 / 1), red, rgba(255 0 0 / 0.75), rgba(255 0 0 / 0.5), rgba(255 0 0 / 0.25));
+  background: linear-gradient(rgba(255 150 150 / 1), #f00, rgba(255 0 0 / 0.75), rgba(255 0 0 / 0.5), rgba(255 0 0 / 0.25));
   filter: drop-shadow(1px 1px 1px rgba(255 0 0 / 0.5));
 }
 
@@ -173,7 +176,7 @@ body {
 .edit-movie:active,
 .delete-movie:active,
 .more-info:active {
-  box-shadow: 0 0 0.5em black inset;
+  box-shadow: 0 0 0.5em #000 inset;
   filter: brightness(0.75);
 }
 
@@ -187,12 +190,12 @@ select {
 
 .container-add,
 .container-add * {
-  color: black;
-  background-color: white;
+  color: #000;
+  background-color: #fff;
 }
 
 .container-add input {
-  border: 1px solid black;
+  border: 1px solid #000;
   margin: 0 0 1em 0;
 }
 
@@ -207,36 +210,33 @@ select {
 }
 
 .modal-header {
-  background-color: white !important;
+  background-color: #fff !important;
 }
 
 .btn-close {
-  border: 1px solid black;
+  border: 1px solid #000;
   transition: 200ms ease-in-out;
 }
 
 .btn-close:hover {
-  background-color: red;
-  fill: white !important;
+  background-color: #f00;
+  fill: #fff !important;
 }
 
 .modal-body,
 .modal-footer,
 .modal-header h5,
 .modal-body span {
-  color: black;
-  background-color: white;
+  color: #000;
+  background-color: #fff;
 }
 
 /* footer */
 
 footer {
   background-color: #000;
+  box-shadow: 0 0 1em #000;
   margin-top: 2em;
-}
-
-.text-muted {
-  filter: drop-shadow(0 0 0.125em rgba(255 255 255 / 0.125));
 }
 
 .bi-twitter {
@@ -244,14 +244,14 @@ footer {
 }
 
 .bi-facebook {
-  fill: blue !important;
+  fill: #00f !important;
 }
 
 .bi-instagram {
   fill: orangered !important;
 }
 
-/* addtional classes */
+/* additional classes */
 
 .width100 {
   width: 100%;
@@ -261,6 +261,8 @@ footer {
 
 @media screen and (max-width: 425px) {
   .page-load {
-    margin-top: 1.5em;
+    width: 75%;
+    padding: 1.125em 0;
+    margin-top: 1.45em;
   }
 }
