--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,10 @@ body {
 /* content */
 
 .movie {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
   width: 16em;
   background-color: rgba(17 17 34/ 0.75);
   backdrop-filter: blur(5px);
@@ -109,17 +113,73 @@ body {
   text-shadow: 0 0 1em #000;
 }
 
-.poster {
-  height: 20em;
-  border-bottom: var(--border);
-  cursor: pointer;
-}
-
 .title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
   font-size: 1em;
   font-weight: bold;
   padding: 0;
   margin: 1em 0;
+}
+
+.movie-id {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  /* width: 100%; */
+  margin: 0.5em 1em;
+}
+
+.id-number {
+  margin: 0;
+  padding: 0 !important;
+}
+
+.strong {
+  display: inline-flex;
+  font-weight: bold;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.director {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin: 0.5em 1em;
+}
+
+.genre {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin: 0.5em 1em;
+}
+
+.rating {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0.5em 1em;
+}
+
+.movie span {
+  display: flex;
+  flex-direction: column;
+}
+
+.poster {
+  width: 100%;
+  height: 20em;
+  border-bottom: var(--border);
+  cursor: pointer;
 }
 
 .movie span {
@@ -133,6 +193,11 @@ body {
 }
 
 .movie-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  flex-wrap: nowrap;
   margin-top: 0.5em;
   overflow: hidden;
 }
@@ -159,6 +224,10 @@ body {
 }
 
 .delete-movie {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   background: linear-gradient(rgba(255 150 150 / 1), #f00, rgba(255 0 0 / 0.75), rgba(255 0 0 / 0.5), rgba(255 0 0 / 0.25));
   filter: drop-shadow(1px 1px 1px rgba(255 0 0 / 0.5));
 }
