--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,10 @@ body {
 }
 
 .edit-movie {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   background: linear-gradient(rgba(150 150 255 / 1), #00f, rgba(0 0 255 / 0.75), rgba(0 0 255 / 0.5), rgba(0 0 255 / 0.25));
   filter: drop-shadow(1px 1px 1px rgba(0 0 255 / 0.5));
 }
