--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ body {
   border-left: var(--border);
   border-right: none;
   border-radius: 5em 0 0 5em;
+  box-shadow: none;
   padding: 0.25em 1em;
   margin: 0 !important;
   z-index: 1;
